# ai_image_detection

./: .damco-project.yml  .gitignore  README.md  api.py  app.py  main.py  pyproject.toml  requirements.txt
configs/: document_fraud.yaml  id_card.yaml  vehicle_damage.yaml
control_room/: README.md  _state.md  pending-changes.md
control_room/context/: decisions.md  email-logs.md  engineering-notes.md  meeting-notes.md  risks.md
control_room/planning/: backlog.md  sprint-active.md
control_room/project-context/: contacts.md  decisions.md  kpis.md  notes.md  project-plan.md  risks.md  team-health.md  team.md
control_room/project-context/communications/: README.md
control_room/project-context/status/: README.md
control_room/project-context/updates/: README.md
control_room/reference/: assessment-prompt-framework.md
docs/: PROJECT-BRIEF.md  architecture.md  brd.md  change-log.md  evaluation_report.md  framework_technical_inventory.md  frd.md  pending-changes.md  user-stories.md
scripts/: download_weights.py  evaluate_framework.py
src/ai_image_detection/: __init__.py  api_schema.py  config.py  pipelines.py
src/ai_image_detection/detectors/: __init__.py  base.py  clip_ufd.py  dino_probe.py  dire.py  dual_branch.py  result.py  rigid.py  siglip2.py  srm.py  textshield.py  trufor.py  yolo_damage.py
src/ai_image_detection/document/: __init__.py  classifier.py
src/ai_image_detection/ensemble/: __init__.py  scorer.py
src/ai_image_detection/explainability/: __init__.py  gradcam.py  heatmap.py
tests/: conftest.py
tests/integration/: test_pipelines.py
tests/unit/: test_detectors.py  test_scorer.py
(+11 files in other folders)
