[build-system]
requires = ["setuptools>=67", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-image-detection"
version = "1.0.0"
description = "AI-generated and AI-edited image detection framework"
requires-python = ">=3.10"
readme = "README.md"
dependencies = [
    "Pillow>=10.0.0",
    "numpy>=1.24.0",
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "transformers>=4.35.0",
    "timm>=0.9.0",
    "diffusers>=0.21.0",
    "ultralytics>=8.0.0",
    "joblib>=1.2.0",
    "streamlit>=1.28.0",
    "scipy>=1.10.0",
    "opencv-python>=4.8.0",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
api = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "python-multipart>=0.0.9",
]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
